syntax = "proto3";

package axion.common;

// Health Check - общие типы для health checks всех сервисов

// Health status
enum HealthStatus {
  HEALTH_STATUS_UNSPECIFIED = 0;
  HEALTH_STATUS_HEALTHY = 1;
  HEALTH_STATUS_DEGRADED = 2;
  HEALTH_STATUS_UNHEALTHY = 3;
}

// Health check response
message HealthCheck {
  HealthStatus status = 1;
  string service_name = 2;
  int64 timestamp = 3;
  map<string, string> details = 4; // Дополнительная информация
  repeated HealthCheckDependency dependencies = 5;
}

message HealthCheckDependency {
  string name = 1; // 'database', 'rabbitmq', 'redis', etc.
  HealthStatus status = 2;
  string message = 3;
  int64 response_time_ms = 4;
}

// Health check request
message HealthCheckRequest {
  bool include_dependencies = 1; // Включить проверку зависимостей
}

// Health check response
message HealthCheckResponse {
  HealthCheck health = 1;
}
